Corrected the wrong image alignment in section div, added a line break in quote div and added a line break in sign div and some padding.

--- a/style.css
+++ b/style.css
@@ -14,13 +14,20 @@ body {
     margin: 0;
     padding-left: 100px;
     font-size: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    width: max-content;
+}
+.logo:hover {
+    color: rgb(98, 98, 195);
 }
 ul {
     list-style: none;
     padding-right: 20px;
     font-size: 17px;
     display: flex;
-    gap: 16px;
+    gap: 10px;
     justify-content: flex-end;
     flex-direction: row;
     margin: 0;
@@ -28,6 +35,10 @@ ul {
 a {
     text-decoration: none;
     color: white;
+    padding: 30px;
+}
+a:hover {
+    background-color: #475466;
 }
 .content {
     margin-left: 100px;
@@ -61,35 +72,52 @@ button:hover {
     border: #819cc9;
 }
 
-.information {
-    text-align: center;
-    margin-bottom: 30px;
-}
 .section {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+    text-align: center;
+}
+.title {
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 50px;
+    margin-bottom: 70px;
 }
 .section img {
-    width: 200px;
-    height: 150px;
+    width: 170px;
+    height: 180px;
+    border-radius: 15px;
+    border: 4px solid rgb(107, 107, 218);
+    margin: 0;
+}
+.section .text {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 90px;
 }
 .section .info {
-    max-width: 200px;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+.section .part {
+    max-width: 14%;
 }
 
 .quote {
     background-color: #E5E7EB;
     width: 100%;
-    height: 200px;
-    font-size: 30px;
+    height: 350px;
+    font-size: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding: 40px;
+}
+.quote span {
+    float: right;
+    font-size: 30px;
 }
 .quote p {
-    max-width: 500px;
+    max-width: 600px;
 }
 
 .sign {
@@ -97,12 +125,22 @@ button:hover {
     color: white;
     width: 950px;
     height: 150px;
-    margin: 50px;
+    margin: 100px;
     margin-left: 300px;
-    display: flex;
+    border-radius: 15px;  
+    display: flex; 
     justify-content: center;
     align-items: center;
-    border-radius: 15px;
+}
+.sign p {
+    font-size: 18px;
+    color: rgb(233, 223, 223);
+    padding-right: 100px;
+}
+.sign span {
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
 }
 .sign-2 {
     background-color: #3882F6;
